--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.security.password.encoder.bcrypt.enabled=true
 # C?u hình JWT (n?u s? d?ng)
 jwt.secret=yourSecretKey
 jwt.expiration=86400000
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.security.user.name=admin
+spring.security.user.password=admin
